--- a/aries.css
+++ b/aries.css
@@ -1,3 +1,14 @@
 body {
     overflow:hidden;
 }
+#fader
+{
+    position:absolute;
+    width:100%;
+    height:100%;
+}
+#fader img {
+    position: absolute;
+    margin-top: -10px;
+    margin-left: -10px;
+}
